# ProjectTiles

./: CMakeLists.txt
images/: snow_forest.tsx  tileSet.tsx
include/: GlobalFiles.h  collisionManager.h  enemy.h  entity.h  inventory.h  item.h  player.h  worldMap.h
src/: GlobalFiles.cpp  collisionManager.cpp  enemy.cpp  entity.cpp  inventory.cpp  item.cpp  main.cpp  player.cpp  worldMap.cpp
